--- a/deck.mdx
+++ b/deck.mdx
@@ -1,5 +1,4 @@
 import { Head, Notes, Image, Appear, components as C } from 'mdx-deck'
-import { Split } from 'mdx-deck/layouts'
 import { CodeSurfer } from "mdx-deck-code-surfer"
 
 export { default as theme } from './theme'
@@ -8,27 +7,28 @@ export { default as theme } from './theme'
   <title>ECMAScript as an evolving language</title>
 </Head>
 
-
-<Image src="./assets/mayflower_segel_transparent.png" size="contain" />
+<Image src="./assets/title.png" size="contain" />
 
 ---
 
 # Agenda
 
-* About me
-* Something on the topic
-* Questions & Discussion
+* About
+* Past
+* Present
+* Future
+* Questions
 * Shameless Plug
 
 ---
 
-# About me
+# About
 
 <C.ul>
   <C.li>Lenz Weber (<em>@phry</em> on Twitter, <em>phryneas</em> everywhere else)</C.li>
   <C.li>Developer at <img src="./assets/mayflower_logo_transparent.png" style={{ height: '1.3em', verticalAlign: 'bottom', position: 'relative', top: '5px', left: '-5px' }} /></C.li>
   <C.li>Working in professional web development since 15 years</C.li>
-  <C.li>In love with the Web, Open Source, Linux and Security.</C.li>
+  <C.li>In love with the Web, Open Source, Linux and Security</C.li>
 </C.ul>
 
 ---
@@ -91,7 +91,8 @@ Well, except IE11. But for that, we have polyfills.
 
 ---
 
-# And they lived happily every after 
+# All our problems are solved
+## ...and they lived happily every after ...
 ## 👸👸/🤴👸/🤴🤴 -> 🦄 -> 🌈 
 
 ---
@@ -129,7 +130,7 @@ The idea behind it:
     { range: [3, 39], notes: "a state machine" },
     { range: [41, 69], notes: "and some glue" },
   ]}
-/>
+/>"
 
 ---
 
@@ -139,7 +140,7 @@ We have found ways to use modern standards in all browsers (at some cost, but th
 
 ## Why should we stop here?
 
-<img src="./assets/transpile.png" />
+<img style={{width: "30%"}} src="./assets/transpile.png" />
 
 ---
 
@@ -154,6 +155,9 @@ We have found ways to use modern standards in all browsers (at some cost, but th
   code={require("!raw-loader!./snippets/typescript.example")}
   showNumbers
 />
+<Notes>
+Doppelpunkt == colon
+</Notes>
 
 ---
 
@@ -168,6 +172,9 @@ We have found ways to use modern standards in all browsers (at some cost, but th
   code={require("!raw-loader!./snippets/clojure.example")}
   showNumbers
 />
+<Notes>
+Lisp-Like
+</Notes>
 
 ---
 
@@ -205,63 +212,56 @@ We have found ways to use modern standards in all browsers (at some cost, but th
 ---
 
 # JSNext
+## (or: ECMAScript as an evolving language)
 
 We can also write Syntax that isn't even part of any standard yet!
 
 ---
 
-Something something about TC39
-https://github.com/tc39/proposals
-https://github.com/tc39/ecma262/blob/master/CONTRIBUTING.md
-https://tc39.github.io/process-document/
+# The Ecma TC39
+
+* The committee that decides on new ECMAScript features
+* Accepts minor suggestions as PR/Issue on github
+* New feature __Proposals__ are developed in separate GitHub repositories and go through 4 stages
 
 ---
 
-Something motivational about evolution and collaboration
+# The way of a Proposal
+
+* Document your problem & solution/suggestion
+* Discuss it with the community
+* Find a TC39 member that will act as __Champion__ for your proposals
+* Go through the four stages: __Proposal__, __Draft__, __Candidate__, __Finished__
 
 ---
 
-Questions
+# Using a Proposal today
 
----
-
-## Edit this file
-
-To create your presentation
-
-<C.ul>
-  <Appear>
-    <C.li>do stuff</C.li>
-    <C.li>add more stuff</C.li>
-  </Appear>
-</C.ul>
-
-
-<Notes>
-* Create speaker notes in fenced code blocks
-</Notes>
-
+* Find an interesting proposal at https://github.com/tc39/proposals
+* Stage 2 proposals usually come with ready-to-use transpiler plugins
+* Just use it
+* If you have issues or suggestions: join the discussion 💖
 
 ---
 
 <CodeSurfer
-  title="Scale and Scroll"
-  notes="Long snippets are scaled ⬇️"
-  code={require("!raw-loader!./snippets/example.jsx")}
+  title="an example from the decorator proposal"
+  lang="javascript"
+  code={require("!raw-loader!./snippets/decorator.example")}
   showNumbers
-  steps={[
-    { range: [1, 3], notes: "⬇️" },
-    { range: [5, 13], notes: "⬇️" },
-    { range: [15, 32], notes: "⬇️" },
-    { lines: [30, 35], notes: "⬇️" },
-    { tokens: { 5: [2, 6], 6: [3] }, notes: "⬇️" },
-    { range: [15, 32], lines: [40], notes: "➡️" }
-  ]}
 />
 
 ---
 
-# Questions & Discussion
+# Lessons to be learned:
+
+* for Developers: you really should be learning ES6 by now. And then probably some Typescript. Also, choose your own Adventure ;)
+* for Recruiters/HR: if you just look for a "Javascript Developer", you can get everything from ES3 to ESNext. Be more specific.
+* for everyone else: Javascript is much more versatile that a few years ago. You can use it for almost everything.
+
+---
+
+# Time for Questions & Discussion
 
 ---
 
