--- a/deck.mdx
+++ b/deck.mdx
@@ -11,24 +11,14 @@ export { default as theme } from './theme'
 
 ---
 
-# Agenda
-
-* About
-* Past
-* Present
-* Future
-* Questions
-* Shameless Plug
-
----
-
-# About
+# About me
 
 <C.ul>
   <C.li>Lenz Weber (<em>@phry</em> on Twitter, <em>phryneas</em> everywhere else)</C.li>
   <C.li>Developer at <img src="./assets/mayflower_logo_transparent.png" style={{ height: '1.3em', verticalAlign: 'bottom', position: 'relative', top: '5px', left: '-5px' }} /></C.li>
   <C.li>Working in professional web development since 15 years</C.li>
   <C.li>In love with the Web, Open Source, Linux and Security</C.li>
+  <C.li>Just getting used to conference speaking, so bear with me</C.li>
 </C.ul>
 
 ---
@@ -60,6 +50,12 @@ export { default as theme } from './theme'
   </Appear>
 </C.ul>
 
+<Notes>
+ES4, Harmony never released 
+2009: ES5 
+2016: ES6
+</Notes>
+
 ---
 
 # And a look at the browser
@@ -87,7 +83,7 @@ All those things were always possible - but differed from browser to browser.
 
 Today, you don't need those libraries any more. Modern browsers support everything we talked about.
 
-Well, except IE11. But for that, we have polyfills.
+Well, except IE11. But for that, we have polyfills. 🎆
 
 ---
 
@@ -144,7 +140,7 @@ We have found ways to use modern standards in all browsers (at some cost, but th
 
 ---
 
-# Languages that extend JavaScript with new syntax
+# Languages that extend JavaScript with a type system
 
 ---
 
@@ -156,7 +152,8 @@ We have found ways to use modern standards in all browsers (at some cost, but th
   showNumbers
 />
 <Notes>
-Doppelpunkt == colon
+Doppelpunkt == colon 
+Also: flow - MS --- FB
 </Notes>
 
 ---
@@ -186,6 +183,10 @@ Lisp-Like
   showNumbers
 />
 
+<Notes>
+Also: Elm, CoffeeScript, PureScript
+</Notes>
+
 ---
 
 # New syntax to write JavaScript
@@ -211,7 +212,7 @@ Lisp-Like
 
 ---
 
-# JSNext
+# Use JSNext
 ## (or: ECMAScript as an evolving language)
 
 We can also write Syntax that isn't even part of any standard yet!
@@ -255,7 +256,7 @@ We can also write Syntax that isn't even part of any standard yet!
 
 # Lessons to be learned:
 
-* for Developers: you really should be learning ES6 by now. And then probably some Typescript. Also, choose your own Adventure ;)
+* for Developers: you really should be learning ES6 by now. And then probably some Typescript. Also, choose your own Adventure with ESNext ;)
 * for Recruiters/HR: if you just look for a "Javascript Developer", you can get everything from ES3 to ESNext. Be more specific.
 * for everyone else: Javascript is much more versatile that a few years ago. You can use it for almost everything.
 
