--- a/deck.mdx
+++ b/deck.mdx
@@ -145,8 +145,8 @@ We have found ways to use modern standards in all browsers (at some cost, but th
 ---
 
 <CodeSurfer
-  title="Typescript"
-  notes="Reads &amp; writes like Javascript, but has a powerful type system"
+  title="TypeScript"
+  notes="Reads &amp; writes like JavaScript, but has a powerful type system"
   lang="typescript"
   code={require("!raw-loader!./snippets/typescript.example")}
   showNumbers
@@ -256,9 +256,9 @@ We can also write Syntax that isn't even part of any standard yet!
 
 # Lessons to be learned:
 
-* for Developers: you really should be learning ES6 by now. And then probably some Typescript. Also, choose your own Adventure with ESNext ;)
-* for Recruiters/HR: if you just look for a "Javascript Developer", you can get everything from ES3 to ESNext. Be more specific.
-* for everyone else: Javascript is much more versatile that a few years ago. You can use it for almost everything.
+* for Developers: you really should be learning ES6 by now. And then probably some TypeScript. Also, choose your own Adventure with ESNext ;)
+* for Recruiters/HR: if you just look for a "JavaScript Developer", you can get everything from ES3 to ESNext. Be more specific.
+* for everyone else: JavaScript is much more versatile that a few years ago. You can use it for almost everything.
 
 ---
 
