--- a/deck.mdx
+++ b/deck.mdx
@@ -254,11 +254,11 @@ We can also write Syntax that isn't even part of any standard yet!
 
 ---
 
-# Lessons to be learned:
+# What this means for Developers:
 
-* for Developers: you really should be learning ES6 by now. And then probably some TypeScript. Also, choose your own Adventure with ESNext ;)
-* for Recruiters/HR: if you just look for a "JavaScript Developer", you can get everything from ES3 to ESNext. Be more specific.
-* for everyone else: JavaScript is much more versatile that a few years ago. You can use it for almost everything.
+* You really should be learning ES6 by now
+* And then probably some TypeScript or Flow
+* Choose your own Adventure with ESNext ;)
 
 ---
 
