--- a/deck.mdx
+++ b/deck.mdx
@@ -1,7 +1,7 @@
-import { Head, Notes, Image, Appear, components as C } from 'mdx-deck'
-import { CodeSurfer } from "mdx-deck-code-surfer"
+import { Head, Notes, Image, Appear, components as C } from "mdx-deck";
+import { CodeSurfer } from "mdx-deck-code-surfer";
 
-export { default as theme } from './theme'
+export { default as theme } from "./theme";
 
 <Head>
   <title>ECMAScript as an evolving language</title>
@@ -14,8 +14,22 @@ export { default as theme } from './theme'
 # About me
 
 <C.ul>
-  <C.li>Lenz Weber (<em>@phry</em> on Twitter, <em>phryneas</em> everywhere else)</C.li>
-  <C.li>Developer at <img src="./assets/mayflower_logo_transparent.png" style={{ height: '1.3em', verticalAlign: 'bottom', position: 'relative', top: '5px', left: '-5px' }} /></C.li>
+  <C.li>
+    Lenz Weber (<em>@phry</em> on Twitter, <em>phryneas</em> everywhere else)
+  </C.li>
+  <C.li>
+    Developer at{" "}
+    <img
+      src="./assets/mayflower_logo_transparent.png"
+      style={{
+        height: "1.3em",
+        verticalAlign: "bottom",
+        position: "relative",
+        top: "5px",
+        left: "-5px"
+      }}
+    />
+  </C.li>
   <C.li>Working in professional web development since 15 years</C.li>
   <C.li>In love with the Web, Open Source, Linux and Security</C.li>
   <C.li>Just getting used to conference speaking, so bear with me</C.li>
@@ -29,8 +43,8 @@ export { default as theme } from './theme'
 
 # ECMAScript? JavaScript!
 
-* **ECMAScript** is the specification behind JavaScript - the baseline every engine should support
-* additionally, for front-end development, the **WhatWG DOM Living Standard** describes APIs that can be used for DOM manipulation
+- **ECMAScript** is the specification behind JavaScript - the baseline every engine should support
+- additionally, for front-end development, the **WhatWG DOM Living Standard** describes APIs that can be used for DOM manipulation
 
 ---
 
@@ -39,22 +53,26 @@ export { default as theme } from './theme'
 <C.ul>
   <C.li>1997-1999, ECMAScript 1-3 were released</C.li>
   <Appear>
-    <C.li>ECMAScript 4 "Harmony": adding classes, modules, static types, generators, iterators, destructuring etc. <br/>
-    <strong>was never released</strong>
+    <C.li>
+      ECMAScript 4 "Harmony": adding classes, modules, static types, generators,
+      iterators, destructuring etc. <br />
+      <strong>was never released</strong>
     </C.li>
-    <C.li>2009, ECMAScript 5: adding strict mode, getters &amp; setters, JSON handling</C.li>
-    <C.li>2015, ES6: classes, modules, iterators, for-of-loops, generators, arrow functions, promises, let-bindings etc.</C.li>
+    <C.li>
+      2009, ECMAScript 5: adding strict mode, getters &amp; setters, JSON
+      handling
+    </C.li>
+    <C.li>
+      2015, ES6: classes, modules, iterators, for-of-loops, generators, arrow
+      functions, promises, let-bindings etc.
+    </C.li>
     <C.li>2016, ES7: exponention operator, Array.prototype.includes</C.li>
     <C.li>2017, ES8: async/await</C.li>
     <C.li>2018, ES9: rest/spread-parameters</C.li>
   </Appear>
 </C.ul>
 
-<Notes>
-ES4, Harmony never released 
-2009: ES5 
-2016: ES6
-</Notes>
+<Notes>ES4, Harmony never released 2009: ES5 2016: ES6</Notes>
 
 ---
 
@@ -62,9 +80,9 @@ ES4, Harmony never released
 
 (getting a real history here is almost impossible, so take these examples)
 
-* Element.querySelector() started being supported ~2009
-* Element.classList() started being supported ~2012
-* **fetch** as a unified API for XHR Requests is supported since 2015-2017 (no IE)
+- Element.querySelector() started being supported ~2009
+- Element.classList() started being supported ~2012
+- **fetch** as a unified API for XHR Requests is supported since 2015-2017 (no IE)
 
 All those things were always possible - but differed from browser to browser.
 
@@ -72,10 +90,10 @@ All those things were always possible - but differed from browser to browser.
 
 # So... 1999 to 2015...
 
-* Many features were not available cross-browser
-* Two types of libraries started surfacing, hiding the browser-specific implementations:
-* DOM manipulation (e.g. jquery, mootools), making up for missing DOM manipluation functionality
-* Utility (e.g. underscore, lodash, mootools, jquery) to provide ease-of-use where the language was lacking
+- Many features were not available cross-browser
+- Two types of libraries started surfacing, hiding the browser-specific implementations:
+- DOM manipulation (e.g. jquery, mootools), making up for missing DOM manipluation functionality
+- Utility (e.g. underscore, lodash, mootools, jquery) to provide ease-of-use where the language was lacking
 
 ---
 
@@ -88,8 +106,10 @@ Well, except IE11. But for that, we have polyfills. 🎆
 ---
 
 # All our problems are solved
+
 ## ...and they lived happily every after ...
-## 👸👸/🤴👸/🤴🤴 -> 🦄 -> 🌈 
+
+## 👸👸/🤴👸/🤴🤴 -> 🦄 -> 🌈
 
 ---
 
@@ -103,16 +123,16 @@ You can polyfill missing functions, but you can't polyfill unsupported syntax.
 
 The idea behind it:
 
-* Write ES ≥ 6
-* Use a transpiler to convert it into ES5 (or even ES3)
-* If you want to get fancy: to every browser, ship a form of ECMAScript it is compatible with
-* add Polyfills for old browsers where necessary
+- Write ES ≥ 6
+- Use a transpiler to convert it into ES5 (or even ES3)
+- If you want to get fancy: to every browser, ship a form of ECMAScript it is compatible with
+- add Polyfills for old browsers where necessary
 
 ---
 
 <CodeSurfer
   title="We write this"
-  code={require('!raw-loader!./snippets/getMovies.js')}
+  code={require("!raw-loader!./snippets/getMovies.js")}
   showNumbers
 />
 
@@ -136,7 +156,7 @@ We have found ways to use modern standards in all browsers (at some cost, but th
 
 ## Why should we stop here?
 
-<img style={{width: "30%"}} src="./assets/transpile.png" />
+<img style={{ width: "30%" }} src="./assets/transpile.png" />
 
 ---
 
@@ -183,9 +203,7 @@ Lisp-Like
   showNumbers
 />
 
-<Notes>
-Also: Elm, CoffeeScript, PureScript
-</Notes>
+<Notes>Also: Elm, CoffeeScript, PureScript</Notes>
 
 ---
 
@@ -213,6 +231,7 @@ Also: Elm, CoffeeScript, PureScript
 ---
 
 # Use JSNext
+
 ## (or: ECMAScript as an evolving language)
 
 We can also write Syntax that isn't even part of any standard yet!
@@ -221,27 +240,27 @@ We can also write Syntax that isn't even part of any standard yet!
 
 # The Ecma TC39
 
-* The committee that decides on new ECMAScript features
-* Accepts minor suggestions as PR/Issue on github
-* New feature __Proposals__ are developed in separate GitHub repositories and go through 4 stages
+- The committee that decides on new ECMAScript features
+- Accepts minor suggestions as PR/Issue on github
+- New feature **Proposals** are developed in separate GitHub repositories and go through 4 stages
 
 ---
 
 # The way of a Proposal
 
-* Document your problem & solution/suggestion
-* Discuss it with the community
-* Find a TC39 member that will act as __Champion__ for your proposals
-* Go through the four stages: __Proposal__, __Draft__, __Candidate__, __Finished__
+- Document your problem & solution/suggestion
+- Discuss it with the community
+- Find a TC39 member that will act as **Champion** for your proposals
+- Go through the four stages: **Proposal**, **Draft**, **Candidate**, **Finished**
 
 ---
 
 # Using a Proposal today
 
-* Find an interesting proposal at https://github.com/tc39/proposals
-* Stage 2 proposals usually come with ready-to-use transpiler plugins
-* Just use it
-* If you have issues or suggestions: join the discussion 💖
+- Find an interesting proposal at https://github.com/tc39/proposals
+- Stage 2 proposals usually come with ready-to-use transpiler plugins
+- Just use it
+- If you have issues or suggestions: join the discussion 💖
 
 ---
 
@@ -256,9 +275,9 @@ We can also write Syntax that isn't even part of any standard yet!
 
 # What this means for Developers:
 
-* You really should be learning ES6 by now
-* And then probably some TypeScript or Flow
-* Choose your own Adventure with ESNext ;)
+- You really should be learning ES6 by now
+- And then probably some TypeScript or Flow
+- Choose your own Adventure with ESNext ;)
 
 ---
 
@@ -270,6 +289,9 @@ We can also write Syntax that isn't even part of any standard yet!
 
 # We are hiring!
 
-<img src="./assets/mayflower_logo_transparent.png" style={{maxWidth: "50%"}}/>
+<img
+  src="./assets/mayflower_logo_transparent.png"
+  style={{ maxWidth: "50%" }}
+/>
 
 (talk to me)
