--- a/deck.mdx
+++ b/deck.mdx
@@ -98,7 +98,7 @@ All those things were always possible - but differed from browser to browser.
 
 ---
 
-# Then the Standards caught up and browsers started converging
+# Then the Standards caught up and browsers started converging (and became evergreen!)
 
 Today, you don't need those libraries any more. Modern browsers support everything we talked about.
 
@@ -280,6 +280,24 @@ We can also write Syntax that isn't even part of any standard yet!
   title="an example from the decorator proposal"
   lang="javascript"
   code={require("!raw-loader!./snippets/decorator.example")}
+  showNumbers
+/>
+
+---
+
+<CodeSurfer
+  title="the pipeline proposal"
+  lang="javascript"
+  code={require("!raw-loader!./snippets/pipeline.js.example")}
+  showNumbers
+/>
+
+---
+
+<CodeSurfer
+  title="combined with the partial application proposal"
+  lang="javascript"
+  code={require("!raw-loader!./snippets/pipeline2.js.example")}
   showNumbers
 />
 
